--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:server": "vite build --outDir=dist_server --emptyOutDir --ssr server/server.js",
+    "start": "nodemon --exec npm run serve",
+    "serve": "node server/server.js"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "vite": "^6.0.5"
   },
   "overrides": {
     "rollup": "npm:@rollup/wasm-node"
+  },
+  "dependencies": {
+    "mongodb": "^6.12.0"
   }
 }
