--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   },
   "overrides": {
     "rollup": "npm:@rollup/wasm-node"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0"
   }
 }
