--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nodemon --exec npm run serve",
     "serve": "node server/server.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
