--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "nodemon --exec npm run serve",
     "serve": "node server/server.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "homepage": "https://yurimcalex.github.io/linkfield"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
