--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0"
   }
 }
